# color-ux-access

./: .env.example  .gitattributes  .gitignore  .pr-body.md  .pre-commit-config.yaml  AGENTS.md  BONUS_PLAN.md  LICENSE  README.md  VLM_RESPONSE_DATA.md  app.py  app_space.py  backend_api.py  check_image.py  check_modal_direct2.py  conftest.py  custom_theme.py  modal_deploy_minicpm.py  pr_compliance_checklist.yaml  pyproject.toml  pytest.ini  requirements.txt  requirements_space.txt  scripts.py  server_app.py  test_endpoint.py  test_function.py  test_iflysouthern.py  test_imports.py  test_modal_direct.py  test_modal_direct3.py  test_modal_direct5.py  test_modal_no_image.py  test_report.py  test_screenshot.py  test_simple.py  test_simple_long.py  test_with_image.py
.github/workflows/: sync-to-hf-space.yml
app/: app.py
color_ux_access/: __init__.py  capture.py  cvd_sim.py  modal_app.py
docs/: AGENTS.md  ARCHITECTURE.md  BONUS_PLAN.md  BONUS_PLAN.md.bak  CVD_USER_AUDIT_MODEL.md  DEPLOYMENT.md  DEVELOPMENT.md  EVALUATION.md  TESTING.md  migration-runbook.md
scripts/: block_root_fix_scripts.py  generate_demo_video.py  generate_narration.py  sync_to_hf_space.py
tests/: generate_fixtures.py  mock_vlm_server.py  test_app_space.py  test_backend_api.py  test_capture.py  test_comparison_grid_layout.py  test_cvd_selector.py  test_e2e.py  test_e2e_headed.py  test_gradio_binary.py  test_modal_app.py  test_modal_direct_invoke.py  test_modal_endpoint.py  test_modal_integration.py  test_server_api.py  test_smoke.py  test_ui_layout_redesign.py  test_vlm_cache.py  test_vlm_model_selection.py  test_wcag_comparison.py
tests/fixtures/: README.md
vlm/: accessibility_report.py  vlm_inference.py  vlm_inference_llama.py
